--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						    <p>Only a master can answer these questions in 10 seconds.</p>
 						 </label>
 					</div>
-					<button id="play" class="btn">Play</button>
+					<button id="play">Play</button>
 				</div>
 
 				<div id="gameSection">
@@ -65,7 +65,7 @@
 					</div>
 
 					<div>
-						<button id="playAgain" class="btn">Play again</button>
+						<button id="playAgain">Play again</button>
 					</div>
 				</div>
 			</main>
