--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<h1>JavaScript Trivia</h1>
+				<h1>Star Wars Trivia</h1>
 			</div>
 		</header>
 			<main class="container">
