--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 
-		<title>JavaScript Trivia Game - Jhongert Fuertes</title>
+		<title>Star Wars Trivia Game - Jhongert Fuertes</title>
 	
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
